force-app/main/default/objects/Proforma_Invoice__c/fields/Advance_Amount_Collected_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Advance_Amount_Collected_Percentage__c</fullName>
    <formula>(Advance_Amount_to_be_collected__c) / Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Amount Collected Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>