force-app/main/default/objects/Proforma_Invoice__c/fields/Advance_Amount_to_be_collected__c.field-meta.xml
<CustomField>
    <fullName>Advance_Amount_to_be_collected__c</fullName>
    <label>Advance Amount to be collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>