force-app/main/default/objects/Proforma_Invoice__c/fields/Balance_Amount_Collected_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount_Collected_Percentage__c</fullName>
    <formula>(Balance_Amount_to_be_collected__c)/ Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Amount Collected Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>