force-app/main/default/objects/Proforma_Invoice__c/fields/Balance_Amount_to_be_collected__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount_to_be_collected__c</fullName>
    <label>Balance Amount to be collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>