force-app/main/default/objects/Proforma_Invoice__c/fields/Bill_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to Address</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proforma Invoices</relationshipLabel>
    <relationshipName>Proforma_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>