force-app/main/default/objects/Proforma_Invoice__c/fields/CGST_Value__c.field-meta.xml
<CustomField>
    <fullName>CGST_Value__c</fullName>
    <label>CGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>