force-app/main/default/objects/Proforma_Invoice__c/fields/Consignor_Address__c.field-meta.xml
<CustomField>
    <fullName>Consignor_Address__c</fullName>
    <label>Consignor Address</label>
    <type>Address</type>
</CustomField>