force-app/main/default/objects/Proforma_Invoice__c/fields/Consignor_GST_No__c.field-meta.xml
<CustomField>
    <fullName>Consignor_GST_No__c</fullName>
    <label>Consignor GST No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>