force-app/main/default/objects/Proforma_Invoice__c/fields/Consignor_Name__c.field-meta.xml
<CustomField>
    <fullName>Consignor_Name__c</fullName>
    <label>Consignor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>