force-app/main/default/objects/Proforma_Invoice__c/fields/Date_of_Creation_of_PI__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Creation_of_PI__c</fullName>
    <label>Date of Creation of PI</label>
    <type>Date</type>
</CustomField>