force-app/main/default/objects/Proforma_Invoice__c/fields/Date_of_Submission_of_PO__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Submission_of_PO__c</fullName>
    <label>Date of Submission of PO</label>
    <type>Date</type>
</CustomField>