force-app/main/default/objects/Proforma_Invoice__c/fields/Freight__c.field-meta.xml
<CustomField>
    <fullName>Freight__c</fullName>
    <label>Freight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inclusive - Borne by IFB</fullName>
            </value>
            <value>
                <fullName>Inclusive - Paid to IFB - Price to be specified in PI</fullName>
            </value>
            <value>
                <fullName>Extra as actuals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>