force-app/main/default/objects/Proforma_Invoice__c/fields/Po_No__c.field-meta.xml
<CustomField>
    <fullName>Po_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Po No</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Proforma Invoices</relationshipLabel>
    <relationshipName>Proforma_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>