force-app/main/default/objects/Proforma_Invoice__c/fields/Ship_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Address</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proforma Invoices (Ship to Address)</relationshipLabel>
    <relationshipName>Proforma_Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>