force-app/main/default/objects/Proforma_Invoice__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Customer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>